==> KitSprout/MungBeanSprout/Software/BSM_TestTFT2.2/Program/Modules/module_ili9341.c <==
#include "stm32f0_system.h"
#include "stm32f0_spi.h"
#include "module_ili9341.h"
#include "module_fontlib.h"
#include "algorithm_string.h"
#define LCD_SPIx            SPI1
#define LCD_SPIx_CLK        RCC_APB2Periph_SPI1
#define LCD_LIG_PIN         GPIO_Pin_1
#define LCD_LIG_GPIO_PORT   GPIOB
#define LCD_LIG_GPIO_CLK    RCC_AHBPeriph_GPIOB
  #define LCD_LIG   TIM2->CCR2
  #define BLIGHT_MAX      255
  #define BLIGHT_MIN      0
  #define BLIGHT_DEFAULT  200
  #define LCD_LIG_H       GPIO_SetBits(LCD_LIG_GPIO_PORT, LCD_LIG_PIN)
  #define LCD_LIG_L       GPIO_ResetBits(LCD_LIG_GPIO_PORT, LCD_LIG_PIN)
  #define BLIGHT_MAX      1
  #define BLIGHT_MIN      0
  #define BLIGHT_DEFAULT  1
#define LCD_DC_PIN          GPIO_Pin_2
#define LCD_DC_GPIO_PORT    GPIOA
#define LCD_DC_GPIO_CLK     RCC_AHBPeriph_GPIOA
#define LCD_DC_H            GPIO_SetBits(LCD_DC_GPIO_PORT, LCD_DC_PIN)
#define LCD_DC_L            GPIO_ResetBits(LCD_DC_GPIO_PORT, LCD_DC_PIN)
#define LCD_RST_PIN         GPIO_Pin_3
#define LCD_RST_GPIO_PORT   GPIOA
#define LCD_RST_GPIO_CLK    RCC_AHBPeriph_GPIOA
#define LCD_RST_H           GPIO_SetBits(LCD_RST_GPIO_PORT, LCD_RST_PIN)
#define LCD_RST_L           GPIO_ResetBits(LCD_RST_GPIO_PORT, LCD_RST_PIN)
#define LCD_CST_PIN         GPIO_Pin_4
#define LCD_CST_GPIO_PORT   GPIOA
#define LCD_CST_GPIO_CLK    RCC_AHBPeriph_GPIOA
#define LCD_CST_H           GPIO_SetBits(LCD_CST_GPIO_PORT, LCD_CST_PIN)
#define LCD_CST_L           GPIO_ResetBits(LCD_CST_GPIO_PORT, LCD_CST_PIN)

void ILI9341_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;
  SPI_InitTypeDef SPI_InitStruct;

  /* SPI Clk Init *************************************************************/
  RCC_APB2PeriphClockCmd(LCD_SPIx_CLK, ENABLE);
  RCC_AHBPeriphClockCmd(LCD_RST_GPIO_CLK | LCD_CST_GPIO_CLK | LCD_DC_GPIO_CLK  | 
                        LCD_SCK_GPIO_CLK | LCD_SDO_GPIO_CLK | LCD_SDI_GPIO_CLK, ENABLE);

  GPIO_PinAFConfig(LCD_SCK_GPIO_PORT, LCD_SCK_SOURCE, LCD_SCK_AF);
  GPIO_PinAFConfig(LCD_SDO_GPIO_PORT, LCD_SDO_SOURCE, LCD_SDO_AF);
  GPIO_PinAFConfig(LCD_SDI_GPIO_PORT, LCD_SDI_SOURCE, LCD_SDI_AF);

  ILI9341_LigConfig();

  /* DC PA2  */
  GPIO_InitStruct.GPIO_Pin = LCD_DC_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_DC_GPIO_PORT, &GPIO_InitStruct);
  /* RST PA3 */
  GPIO_InitStruct.GPIO_Pin = LCD_RST_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_RST_GPIO_PORT, &GPIO_InitStruct);
  /* CST PA4  */
  GPIO_InitStruct.GPIO_Pin = LCD_CST_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_CST_GPIO_PORT, &GPIO_InitStruct);
  /* SCK PA5 */
  GPIO_InitStruct.GPIO_Pin = LCD_SCK_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_SCK_GPIO_PORT, &GPIO_InitStruct);
  /* SDO PA6 */
  GPIO_InitStruct.GPIO_Pin = LCD_SDO_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_SDO_GPIO_PORT, &GPIO_InitStruct);
  /* MOSI PA7 */
  GPIO_InitStruct.GPIO_Pin = LCD_SDI_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_SDI_GPIO_PORT, &GPIO_InitStruct);

  LCD_CST_H;  // 低電位有效

  /* SPI Init ****************************************************************/
  SPI_InitStruct.SPI_Direction = SPI_Direction_2Lines_FullDuplex;   // Full Duplex
  SPI_InitStruct.SPI_Mode = SPI_Mode_Master;                        // Master Mode
  SPI_InitStruct.SPI_DataSize = SPI_DataSize_8b;                    // Data Size 8 bit
  SPI_InitStruct.SPI_CPOL = SPI_CPOL_High;                          // Transitioned On The Falling Edge
  SPI_InitStruct.SPI_CPHA = SPI_CPHA_2Edge;                         // Latched On the Rising Edge
  SPI_InitStruct.SPI_NSS = SPI_NSS_Soft;                            // Software NSS Signal
  SPI_InitStruct.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;   // fsck = APB1 36MHz / 2 = 18MHz
  SPI_InitStruct.SPI_FirstBit = SPI_FirstBit_MSB;                   // MSB First
  SPI_InitStruct.SPI_CRCPolynomial = 7;
  SPI_Init(LCD_SPIx, &SPI_InitStruct);
  SPI_RxFIFOThresholdConfig(SPI1, SPI_RxFIFOThreshold_QF);
  SPI_Cmd(LCD_SPIx, ENABLE);
}

void ILI9341_LigConfig( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

#ifdef BLIGHT_PWM

//  /* PWM Clk Init *************************************************************/
//  TIM_TimeBaseInitTypeDef TIM_TimeBaseStruct;
//  TIM_OCInitTypeDef TIM_OCInitStruct;

//  RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
//  RCC_APB2PeriphClockCmd(LCD_LIG_GPIO_CLK, ENABLE);

//  /* LIG PA6  */
//  GPIO_InitStruct.GPIO_Pin = LCD_LIG_PIN;
//  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF_PP;
//  GPIO_Init(LCD_LIG_GPIO_PORT, &GPIO_InitStruct);

//  TIM_DeInit(TIM2);

//  /************************** PWM Output **************************************/
//  /* 設定 TIM2 Time Base */
//  TIM_TimeBaseStruct.TIM_Period = (uint16_t)(256-1);               // Set Period
//  TIM_TimeBaseStruct.TIM_Prescaler = (uint16_t)(0);                // Freq = APB1 36MHz / 1 = 36MHz
//  TIM_TimeBaseStruct.TIM_ClockDivision = TIM_CKD_DIV1;
//  TIM_TimeBaseStruct.TIM_CounterMode = TIM_CounterMode_Up;    // Count Up
//  TIM_TimeBaseInit(TIM2, &TIM_TimeBaseStruct);

//  /* 設定 TIM2 OC2 */
//  TIM_OCInitStruct.TIM_OCMode = TIM_OCMode_PWM1;              // PWM1 Mode
//  TIM_OCInitStruct.TIM_OutputState = TIM_OutputState_Enable;  // Enable OC
//  TIM_OCInitStruct.TIM_Pulse = 0;                             // Period Pulse
//  TIM_OCInitStruct.TIM_OCPolarity = TIM_OCPolarity_High;      // 當計數值小於 PWM_MOTOR_MIN 時為高電平
//  TIM_OC2Init(TIM2, &TIM_OCInitStruct);                       // 初始化 TIM3 OC1
//  TIM_OC2PreloadConfig(TIM2, TIM_OCPreload_Enable);           // Enable TIM3 OC1 Preload

//  /* 啟動 */
//  TIM_ARRPreloadConfig(TIM2, ENABLE);                         // Enable TIM3 ARR Preload
//  TIM_Cmd(TIM2, ENABLE);                                      // Enable TIM3

//    LCD_LIG = BLIGHT_MIN;

#else
  /* GPIO Clk Init ************************************************************/
  RCC_AHBPeriphClockCmd(LCD_LIG_GPIO_CLK, ENABLE);

  /* LIG PB1  */
  GPIO_InitStruct.GPIO_Pin = LCD_LIG_PIN;
  GPIO_InitStruct.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_Init(LCD_LIG_GPIO_PORT, &GPIO_InitStruct);

  LCD_LIG_L;
#endif
}

void LCD_SetCursor( uint16_t CoordiX, uint16_t CoordiY )
{
	LCD_WriteCmd(0x2A);
  LCD_WriteData(Byte8H(CoordiX));
	LCD_WriteData(Byte8L(CoordiX));
	LCD_WriteCmd(0x2B);
  LCD_WriteData(Byte8H(CoordiY));
	LCD_WriteData(Byte8L(CoordiY));
	LCD_WriteCmd(0x2C);
}

void LCD_SetWindow( uint16_t StartX, uint16_t StartY, uint16_t EndX, uint16_t EndY )
{
	LCD_WriteCmd(0x2A);
  LCD_WriteData(Byte8H(StartX));
	LCD_WriteData(Byte8L(StartX));
  LCD_WriteData(Byte8H(EndX));
	LCD_WriteData(Byte8L(EndX));
	LCD_WriteCmd(0x2B);
  LCD_WriteData(Byte8H(StartY));
	LCD_WriteData(Byte8L(StartY));
  LCD_WriteData(Byte8H(EndY));
	LCD_WriteData(Byte8L(EndY));
	LCD_WriteCmd(0x2C);
}

void LCD_DrawPixel( uint16_t CoordiX, uint16_t CoordiY, uint16_t Color )
{
  LCD_SetCursor(CoordiX, CoordiY);
  LCD_WriteColor(Color);
}

void LCD_DrawLineX( uint16_t CoordiX, uint16_t CoordiY, uint16_t Length, uint16_t Color )
{
	uint16_t i;

	for(i=0; i<Length; i++)
		LCD_DrawPixel(CoordiX+i, CoordiY, Color);
}

void LCD_DrawLineY( uint16_t CoordiX, uint16_t CoordiY, uint16_t Length, uint16_t Color )
{
	uint16_t i;

	for(i=0; i<Length; i++)
		LCD_DrawPixel(CoordiX, CoordiY+i, Color);
}

void LCD_DrawRectangle( uint16_t CoordiX, uint16_t CoordiY, uint16_t Width, uint16_t Height, uint16_t Color )
{
	uint16_t i;

	for(i=0; i<=Height; i++) {
		LCD_DrawPixel(CoordiX+i, CoordiY, Color);
		LCD_DrawPixel(CoordiX+i, CoordiY+Width, Color);
	}
	for(i=1; i<Width; i++) {
		LCD_DrawPixel(CoordiX, CoordiY+i, Color);
		LCD_DrawPixel(CoordiX+Height, CoordiY+i, Color);
	}
}

void LCD_DrawRectangleFill( uint16_t CoordiX, uint16_t CoordiY, uint16_t Width, uint16_t Height, uint16_t Color )
{
	uint16_t i, j;

	for(i=0; i<Width; i++)
		for(j=0; j<Height; j++)
			LCD_DrawPixel(CoordiX+j, CoordiY+i, Color);
}

void LCD_DrawCircle( uint16_t CoordiX, uint16_t CoordiY, uint16_t Radius, uint16_t Color )
{
	int32_t a, b;
	int32_t di;

	a = 0;
	b = Radius;
	di = 3-(Radius<<1);

	while(a<=b) {
		LCD_DrawPixel(CoordiX-b, CoordiY-a, Color); //3
		LCD_DrawPixel(CoordiX+b, CoordiY-a, Color); //0
		LCD_DrawPixel(CoordiX-a, CoordiY+b, Color); //1
		LCD_DrawPixel(CoordiX-b, CoordiY-a, Color); //7
		LCD_DrawPixel(CoordiX-a, CoordiY-b, Color); //2
		LCD_DrawPixel(CoordiX+b, CoordiY+a, Color); //4
		LCD_DrawPixel(CoordiX+a, CoordiY-b, Color); //5
		LCD_DrawPixel(CoordiX+a, CoordiY+b, Color); //6
		LCD_DrawPixel(CoordiX-b, CoordiY+a, Color);
		a++;
		// 使用Bresenham算法畫圓
		if(di<0)
			di += 4*a+6;
		else {
			di+=10+4*(a-b);
			b--;
		}
		LCD_DrawPixel(CoordiX+a, CoordiY+b, Color);
	}
}

void LCD_DrawPicture( uint16_t CoordiX, uint16_t CoordiY, uint16_t Width, uint16_t Height, const uint8_t *Pic )
{
  uint16_t* readPixel = (uint16_t*)Pic;
  uint32_t i = 0, j = Height*Width;

  LCD_SetWindow(CoordiX, CoordiY, CoordiX+Width-1, CoordiY+Height-1);

  for(i=0; i<j; i++)
    LCD_WriteColor(readPixel[i]);
}

void LCD_PutChar( uint16_t CoordiX, uint16_t CoordiY, int8_t* ChWord, uint16_t FontColor, uint16_t BackColor )
{
	uint8_t TmpChar = 0;
	uint16_t i = 0, j = 0;

	for(i=0; i<16; i++) {
		TmpChar = ASCII_16x8[*ChWord-32][i];
		for(j=0; j<8; j++) {
			if(((TmpChar>>(7-j))&0x01) == 0x01)
				LCD_DrawPixel(CoordiX+j, CoordiY+i, FontColor);	// 字符顏色
			else
				LCD_DrawPixel(CoordiX+j, CoordiY+i, BackColor);	// 背景顏色
		}
	}
}

void LCD_PutStr( uint16_t CoordiX, uint16_t CoordiY, int8_t *ChWord, uint16_t FontColor, uint16_t BackColor )
{
	uint16_t OffsetX = 0;

  while(*ChWord) {
    LCD_PutChar(CoordiX+OffsetX, CoordiY, ChWord, FontColor, BackColor);
    ChWord++;
    OffsetX += 8;
  }
}

void LCD_PutNum( uint16_t CoordiX, uint16_t CoordiY, StrType Type, uint8_t Length, uint32_t NumData, uint16_t FontColor, uint16_t BackColor )
{
	int8_t TmpNumber[16] = {0};

	Str_NumToChar(Type, Length, TmpNumber, NumData);
	LCD_PutStr(CoordiX, CoordiY, TmpNumber, FontColor, BackColor);
}
