==> KitSprout/YellowBeanSprout/Software/BSY_ModuleHAL_TFT2.2-WF/Program/modules/module_ili9341.c <==
#include "drivers\stm32f4_system.h"
#include "drivers\stm32f4_spi.h"
#include "algorithms\algorithm_string.h"
#include "module_ili9341.h"
#include "module_fontlib.h"
#define LCD_SPIx                    SPI1
#define LCD_SPIx_CLK_ENABLE()       __HAL_RCC_SPI1_CLK_ENABLE()
#define LCD_LIG_PIN                 GPIO_PIN_1
#define LCD_LIG_GPIO_PORT           GPIOA
#define LCD_LIG_GPIO_CLK_ENABLE()   __HAL_RCC_GPIOA_CLK_ENABLE()
#define BLIGHT_PWM
  #define LCD_LIG_TIMx              TIM2
  #define LCD_LIG_TIMx_CHANNEL      TIM_CHANNEL_2
  #define LCD_TIMx_CLK_ENABLE()     __HAL_RCC_TIM2_CLK_ENABLE();
  #define LCD_LIG_AF                GPIO_AF1_TIM2
  #define LCD_LIG                   LCD_LIG_TIMx->CCR2
  #define BLIGHT_MAX                255
  #define BLIGHT_MIN                0
  #define BLIGHT_DEFAULT            200
  #define LCD_LIG_H()               __GPIO_SET(LCD_LIG_GPIO_PORT, LCD_LIG_PIN)
  #define LCD_LIG_L()               __GPIO_RST(LCD_LIG_GPIO_PORT, LCD_LIG_PIN)
  #define BLIGHT_MAX                1
  #define BLIGHT_MIN                0
  #define BLIGHT_DEFAULT            1
#define LCD_DC_PIN                  GPIO_PIN_3
#define LCD_DC_GPIO_PORT            GPIOA
#define LCD_DC_GPIO_CLK_ENABLE()    __HAL_RCC_GPIOA_CLK_ENABLE()
#define LCD_DC_H()                  __GPIO_SET(LCD_DC_GPIO_PORT, LCD_DC_PIN)
#define LCD_DC_L()                  __GPIO_RST(LCD_DC_GPIO_PORT, LCD_DC_PIN)
#define LCD_RST_PIN                 GPIO_PIN_2
#define LCD_RST_GPIO_PORT           GPIOA

void ILI9341_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

  /* SPI Clk ******************************************************************/
  LCD_DC_GPIO_CLK_ENABLE();
  LCD_RST_GPIO_CLK_ENABLE();
  LCD_CST_GPIO_CLK_ENABLE();
  LCD_SCK_GPIO_CLK_ENABLE();
  LCD_SDO_GPIO_CLK_ENABLE();
  LCD_SDI_GPIO_CLK_ENABLE();
  LCD_SPIx_CLK_ENABLE();

  ILI9341_LigConfig();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = LCD_DC_PIN;
  HAL_GPIO_Init(LCD_DC_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = LCD_RST_PIN;
  HAL_GPIO_Init(LCD_RST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = LCD_CST_PIN;
  HAL_GPIO_Init(LCD_CST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = LCD_SCK_PIN;
  GPIO_InitStruct.Alternate = LCD_SCK_AF;
  HAL_GPIO_Init(LCD_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = LCD_SDO_PIN;
  GPIO_InitStruct.Alternate = LCD_SDO_AF;
  HAL_GPIO_Init(LCD_SDO_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = LCD_SDI_PIN;
  GPIO_InitStruct.Alternate = LCD_SDI_AF;
  HAL_GPIO_Init(LCD_SDI_GPIO_PORT, &GPIO_InitStruct);

  LCD_CST_H();  // LOW ENABLE

  /* SPI Init ****************************************************************/
  LCD_SPI_InitStruct.Instance               = LCD_SPIx;
  LCD_SPI_InitStruct.Init.Mode              = SPI_MODE_MASTER;
  LCD_SPI_InitStruct.Init.Direction         = SPI_DIRECTION_2LINES;
  LCD_SPI_InitStruct.Init.DataSize          = SPI_DATASIZE_8BIT;
  LCD_SPI_InitStruct.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  LCD_SPI_InitStruct.Init.CLKPhase          = SPI_PHASE_2EDGE;
  LCD_SPI_InitStruct.Init.NSS               = SPI_NSS_SOFT;
  LCD_SPI_InitStruct.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
  LCD_SPI_InitStruct.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  LCD_SPI_InitStruct.Init.TIMode            = SPI_TIMODE_DISABLE;
  LCD_SPI_InitStruct.Init.CRCCalculation    = SPI_CRCCALCULATION_ENABLE;
  LCD_SPI_InitStruct.Init.CRCPolynomial     = 7;
  HAL_SPI_Init(&LCD_SPI_InitStruct);

  __HAL_SPI_ENABLE(&LCD_SPI_InitStruct);
}

static void ILI9341_LigConfig( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

#ifdef BLIGHT_PWM
  TIM_HandleTypeDef TIM_InitStruct;
  TIM_OC_InitTypeDef TIM_OC_InitStruct;

  /* PWM Clk Init *************************************************************/
  LCD_TIMx_CLK_ENABLE();

  /* LIG GPIO  */
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_PULLDOWN;
  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Alternate = LCD_LIG_AF;
  GPIO_InitStruct.Pin = LCD_LIG_PIN;
  HAL_GPIO_Init(LCD_LIG_GPIO_PORT, &GPIO_InitStruct);

  /************************** PWM Output **************************************/
  /* TIMx Time Base */
  TIM_InitStruct.Instance               = LCD_LIG_TIMx;
  TIM_InitStruct.Init.Prescaler         = 90 - 1;         // 90 MHz / 72 = 1 MHz
  TIM_InitStruct.Init.Period            = BLIGHT_MAX - 1; // PWM Freq = 10 kHz
  TIM_InitStruct.Init.ClockDivision     = 0;
  TIM_InitStruct.Init.CounterMode       = TIM_COUNTERMODE_UP;
  TIM_InitStruct.Init.RepetitionCounter = 0;
  HAL_TIM_PWM_Init(&TIM_InitStruct);

  /* TIMx OC2 */
  TIM_OC_InitStruct.OCMode      = TIM_OCMODE_PWM2;
  TIM_OC_InitStruct.OCFastMode  = TIM_OCFAST_DISABLE;
  TIM_OC_InitStruct.OCPolarity  = TIM_OCPOLARITY_LOW;
  TIM_OC_InitStruct.OCNPolarity = TIM_OCNPOLARITY_HIGH;
  TIM_OC_InitStruct.OCIdleState = TIM_OCIDLESTATE_SET;
  TIM_OC_InitStruct.OCNIdleState= TIM_OCNIDLESTATE_RESET;

  /* Enable */
  TIM_OC_InitStruct.Pulse = BLIGHT_MIN;
  HAL_TIM_PWM_ConfigChannel(&TIM_InitStruct, &TIM_OC_InitStruct, LCD_LIG_TIMx_CHANNEL);
  HAL_TIM_PWM_Start(&TIM_InitStruct, LCD_LIG_TIMx_CHANNEL);

#else
  /* GPIO Clk ******************************************************************/
  LCD_LIG_GPIO_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = LCD_LIG_PIN;
  HAL_GPIO_Init(LCD_LIG_GPIO_PORT, &GPIO_InitStruct);

  LCD_LIG_L();

#endif
}

void LCD_SetCursor( uint16_t coordiX, uint16_t coordiY )
{
  LCD_WriteCmd(0x2A);
  LCD_WriteData(Byte8H(coordiX));
  LCD_WriteData(Byte8L(coordiX));
  LCD_WriteCmd(0x2B);
  LCD_WriteData(Byte8H(coordiY));
  LCD_WriteData(Byte8L(coordiY));
  LCD_WriteCmd(0x2C);
}

void LCD_SetWindow( uint16_t startX, uint16_t startY, uint16_t endX, uint16_t endY )
{
  LCD_WriteCmd(0x2A);
  LCD_WriteData(Byte8H(startX));
  LCD_WriteData(Byte8L(startX));
  LCD_WriteData(Byte8H(endX));
  LCD_WriteData(Byte8L(endX));
  LCD_WriteCmd(0x2B);
  LCD_WriteData(Byte8H(startY));
  LCD_WriteData(Byte8L(startY));
  LCD_WriteData(Byte8H(endY));
  LCD_WriteData(Byte8L(endY));
  LCD_WriteCmd(0x2C);
}

void LCD_DrawPixel( uint16_t coordiX, uint16_t coordiY, uint16_t color )
{
  LCD_SetCursor(coordiX, coordiY);
  LCD_WriteColor(color);
}

void LCD_DrawLineX( uint16_t coordiX, uint16_t coordiY, uint16_t length, uint16_t color )
{
  for(uint16_t i = 0; i < length; i++)
    LCD_DrawPixel(coordiX + i, coordiY, color);
}

void LCD_DrawLineY( uint16_t coordiX, uint16_t coordiY, uint16_t length, uint16_t color )
{
  for(uint16_t i = 0; i < length; i++)
    LCD_DrawPixel(coordiX, coordiY + i, color);
}

void LCD_DrawRectangle( uint16_t coordiX, uint16_t coordiY, uint16_t width, uint16_t height, uint16_t color )
{
  uint16_t i;

  for(i = 0; i <= height; i++) {
    LCD_DrawPixel(coordiX + i, coordiY, color);
    LCD_DrawPixel(coordiX + i, coordiY + width, color);
  }
  for(i = 1; i < width; i++) {
    LCD_DrawPixel(coordiX, coordiY + i, color);
    LCD_DrawPixel(coordiX + height, coordiY + i, color);
  }
}

void LCD_DrawRectangleFill( uint16_t coordiX, uint16_t coordiY, uint16_t width, uint16_t height, uint16_t color )
{
  uint16_t i, j;

  for(i = 0; i < width; i++)
    for(j = 0; j < height; j++)
      LCD_DrawPixel(coordiX + j, coordiY + i, color);
}

void LCD_DrawCircle( uint16_t coordiX, uint16_t coordiY, uint16_t radius, uint16_t color )
{
  int a, b;
  int di;

  a = 0;
  b = radius;
  di = 3 - (radius << 1);

  while(a <= b) {
    LCD_DrawPixel(coordiX-b, coordiY-a, color); //3
    LCD_DrawPixel(coordiX+b, coordiY-a, color); //0
    LCD_DrawPixel(coordiX-a, coordiY+b, color); //1
    LCD_DrawPixel(coordiX-b, coordiY-a, color); //7
    LCD_DrawPixel(coordiX-a, coordiY-b, color); //2
    LCD_DrawPixel(coordiX+b, coordiY+a, color); //4
    LCD_DrawPixel(coordiX+a, coordiY-b, color); //5
    LCD_DrawPixel(coordiX+a, coordiY+b, color); //6
    LCD_DrawPixel(coordiX-b, coordiY+a, color);
    a++;
    // Bresenham
    if(di < 0)
      di += 4 * a + 6;
    else {
      di += 10 + 4* (a - b);
      b--;
    }
    LCD_DrawPixel(coordiX+a, coordiY+b, color);
  }
}

void LCD_DrawPicture( uint16_t coordiX, uint16_t coordiY, uint16_t width, uint16_t height, const uint8_t *pic )
{
  uint16_t *readPixel = (uint16_t*)pic;
  uint32_t i = 0, j = height * width;

  LCD_SetWindow(coordiX, coordiY, coordiX + width - 1, coordiY + height - 1);

  for(i = 0; i < j; i++)
    LCD_WriteColor(readPixel[i]);
}

void LCD_PutChar( uint16_t coordiX, uint16_t coordiY, char *chWord, uint16_t fontColor, uint16_t backColor )
{
  uint8_t tmpChar = 0;
  uint16_t i = 0, j = 0;

  for(i = 0; i < 16; i++) {
    tmpChar = ASCII_16x8[*chWord - 32][i];
    for(j = 0; j < 8; j++) {
      if(((tmpChar >> (7 - j)) & 0x01) == 0x01)
        LCD_DrawPixel(coordiX + j, coordiY + i, fontColor);
      else
        LCD_DrawPixel(coordiX + j, coordiY + i, backColor);
    }
  }
}

void LCD_PutStr( uint16_t coordiX, uint16_t coordiY, char *chWord, uint16_t fontColor, uint16_t backColor )
{
  uint16_t offsetX = 0;

  while(*chWord) {
    LCD_PutChar(coordiX + offsetX, coordiY, chWord, fontColor, backColor);
    chWord++;
    offsetX += 8;
  }
}

void LCD_PutNum( uint16_t coordiX, uint16_t coordiY, StringType type, uint8_t length, uint32_t number, uint16_t fontColor, uint16_t backColor )
{
  char tmpStr[16] = {0};

  num2Str(type, length, tmpStr, number);
  LCD_PutStr(coordiX, coordiY, tmpStr, fontColor, backColor);
}
